--- a/lesson2/package.json
+++ b/lesson2/package.json
@@ -10,8 +10,11 @@
   "author": "EcodeJR",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.16",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "postcss": "^8.4.31",
+    "postcss-cli": "^10.1.0"
   }
 }
