--- a/lesson2/package.json
+++ b/lesson2/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "mongodb": "^6.3.0",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0"
   }
